# src/api/REST/interfaces/requests/usercreation.request.ts
@@ -1,0 +1,3 @@
+export interface UserCreationRequest{
+    name: string
+}
