# src/api/REST/util/examples/user.example.response.ts
@@ -1,0 +1,11 @@
+import { UserCreationResponse } from "../../models/responses/user.create.response";
+import { InstructorUser, UserType } from "../../models/user.model";
+
+const instructorUser = new InstructorUser(
+    "1b9d6bcd-bbfd-4b2d-9b5d-ab8dfbbd4bed",
+    "InstructorExample",
+    "2b0d7b3dcb",
+    UserType.Instructor
+    );
+
+export const userCreateResonse: UserCreationResponse = new UserCreationResponse(instructorUser);
